cargo-features = ["named-profiles"]

[package]
name = "rd"
version = "0.0.0"
authors = ["Sidharth Kshatriya"]
edition = "2018"
build = "build.rs"

[dependencies]
array-init = "0.1.1"
bit_field= "0.10.0"
brotli-sys = "0.3.2"
capnp = "0.13"
gimli = "0.23.0"
goblin = "0.2"
backtrace = "0.3"
bitflags = "1.2.1"
lazy_static = "1.4.0"
libc = "0.2"
memchr = "2.3.4"
memoffset = "0.5"
nix = "0.18"
owning_ref = "0.4"
rand = "0.7"
raw-cpuid = "7.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1.0"
structopt = "0.3"

[build-dependencies]
bindgen = "0.55"
capnpc = "0.13"
cc = "1.0"

[features]
default = []
verify_syscall_numbers = []

[profile.release]
lto = true
