cargo-features = ["named-profiles"]

[package]
name = "rd"
version = "0.0.0"
authors = ["Sidharth Kshatriya"]
edition = "2018"
build = "build.rs"

[dependencies]
array-init = "2.0"
bit_field= "0.10"
brotli-sys = "0.3.2"
crc32fast ="1.2"
capnp = "0.14"
goblin = "0.3"
backtrace = "0.3"
bitflags = "1.2"
lazy_static = "1.4.0"
libc = "0.2"
memchr = "2.3"
memoffset = "0.6"
nix = "0.20"
object = "0.24"
owning_ref = "0.4"
rand = "0.8"
raw-cpuid = "9.0"
regex = "1"
rocksdb = { default-features = false, version = "0.16", features = ["zstd", "snappy"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
static_assertions = "1.1"
structopt = "0.3"

[build-dependencies]
bindgen = "0.58"
capnpc = "0.14"
cc = "1.0"
cmake = "0.1"

[features]
default = []
verify_syscall_numbers = []

[profile.release]
lto = true
codegen-units = 1
